--- a/first-project/index.css
+++ b/first-project/index.css
@@ -26,6 +26,6 @@ body::before{
     width: 100;
     z-index: -1;
     background: var(--color-darkblue);
-    background-image: linear-gradient(215deg,rgba(75,113,179,0.8),rgba(124,192,147,0.8),url(./image/WhatsApp\ Image\ 2022-12-05\ at\ 08.33.19.jpeg));
+    background-image: linear-gradient(215deg,rgba(75,113,179,0.8),rgba(124,192,147,0.8),url(./image/pexels-min-an-1006121.jpg));
 
 }
