--- a/first-project/index.css
+++ b/first-project/index.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Bowlby+One+SC&family=Mukta:wght@300&display=swap');
 :root{
-    --color-white:#f3f3f3;
-    --color-darkblue:#796ec8;
+    --color-white:#7c8f51;
+    --color-darkblue:#a49ce3;
     --color-darkblue-alpha:rgb(102, 166, 235);
-    --color-green:rgb(34, 221, 34);
+    --color-green:rgb(74, 228, 74);
 }
 *,*::before,*::after{
     box-sizing: border-box;
@@ -23,9 +23,9 @@ body::before{
     top: 0;
     left: 0;
     height: 100%;
-    width: 100;
+    width: 1005;
     z-index: -1;
     background: var(--color-darkblue);
-    background-image: ;
+    background-image:linear-gradient(215deg,rgba(75,113,179,0.8),rgba(124,192,147),)url(./image/pexels-min-an-1006121.jpg) ;
     
 }
