--- a/first-project/index.css
+++ b/first-project/index.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 :root{
-    --color-white:#f3f3f3;
-    --color-darkblue:#796ec8;
-    --color-darkblue-alpha:rgba(13, 138, 187, 0.8);
-    --color-green:#21eb6e;
+    --color-white:#5a45d0;
+    --color-darkblue:#a9a1e3;
+    --color-darkblue-alpha:rgba(234, 146, 53, 0.8);
+    --color-green:#ebc621;
 }
 *,*::before,*::after{
     box-sizing: border-box;
@@ -13,7 +13,7 @@ body{
     font-family: 'Poppins',sans-serif;
     font-size: 1rem;
     font-weight: 400;
-    line-height: 1.4;
+    line-height: 1.45;
     color: var(--color-white);
     margin: 0;
 }
@@ -26,7 +26,7 @@ body::before{
     width: 100%;
     z-index: -1;
     background: var(--color-darkblue);
-    background-image: linear-gradient(215deg,rgba(75, 113, 179, 0.8),rgba(124, 192, 147, 0.8)),url(/developers.jpg);
+    background-image: linear-gradient(215deg,rgba(75, 113, 179, 0.8),rgba(124, 192, 147, 0.8)),url(./image/pexels-min-an-1006121.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
