--- a/second-project/style.css
+++ b/second-project/style.css
@@ -1,3 +1,4 @@
+
 *{
     margin: 0;
     padding: 0;
@@ -7,4 +8,83 @@
     height: 100vh;
     background-size: 100% 100%;
 }
-.contai
+.container .navbar{
+    width: 100%;
+    height: 80px;
+    background: rgb(137, 196, 43);
+}
+.navbar .logo{
+    display: inline-block;
+    margin-left: 50px;
+    margin-top: 20px;
+}
+.navbar .logo a{
+    color: antiquewhite;
+    text-decoration: none;
+    font-size: 30px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.navbar ul{
+    float: right;
+    margin-right: 20px;
+}
+.navbar ul li{
+    list-style: none;
+    display: inline-block;
+    margin: 0 8px;
+    line-height: 75px;
+}
+.navbar ul li a{
+    color: antiquewhite;
+    text-decoration: none;
+    font-size: 20px;
+    padding: 6px 13px;
+    font-family: 'Mukta', sans-serif;
+}
+.navbar ul li a.aktif,
+.navbar ul li a:hover{
+    background-color: rgb(216, 216, 71);
+    border-radius: 3px;
+
+}
+.container .center{
+    position: absolute;
+    top: 50%;
+    left:50%;
+    transform: translate(-50%,-50%);
+    font-family: 'Mukta', sans-serif;
+    user-select: none;
+}
+.center h1{
+    color: bisque;
+    font-size: 50px;
+    font-weight: bold;
+    width: 900px;
+    text-align: center;
+}
+.center h2{
+    color: bisque;
+    font-size: 50px;
+    font-weight: bold;
+    width: 885px;
+    margin-top: 10px;
+    text-align: center;
+
+}
+.center .buttons{
+    margin: 35px 280px;
+
+
+}
+.buttons button{
+    height: 50px;
+    width: 150px;
+    font-size: 18px;
+    color: bisque;
+    background: rgb(203, 21, 21);
+    border: solid 2px green;
+    cursor: pointer;
+    outline: none;
+
+}
+
